--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "tiktok-mcp",
-    "version": "0.0.1",
-    "description": "MCP server for TikTok",
+    "name": "@turnono/tiktok-mcp",
+    "version": "0.2.0",
+    "description": "Backend-agnostic MCP server for TikTok analysis",
     "license": "MIT",
-    "author": "Simon",
-    "homepage": "https://tikneuron.com",
+    "author": "turnono",
+    "homepage": "https://github.com/turnono/tiktok-mcp",
     "type": "module",
     "bin": {
       "tiktok-mcp-server": "build/index.js"
