--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.10.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "zod": "^3.23.8"
   },
